
===========
Changes log
===========

@version-full@ (@release-date@)
    - Bugs fixed
       - Fixed NullPointerException when requestind a Directory with a query string. Issue #1206.
         Reported by Ralph van Etten.
       - Fixed support of non-bytes ranges. Issue #1132.
       - Fixed encoding issue when using CookieAuthenticator. Issue #1159.
         Reported by Arjohn Kampman.
       - Added support of 'Access-Control-Max-Age'. Issue #1109.
         Reported by Tal Liron.

- 2.3.7 (03/14/2016)
    - Bugs fixed
       - Fixed invalid Class-Path header in manifest of the org.restlet.jar. Issue #698.
         Reported by Marcin Zajączkowski and Christopher Dancy.
       - Fixed computation of request#originalRef when behind a proxy. Issue #1191.
    - Enhancements
       - Upgraded org.json to version 20160212. Issue #1195.

- 2.3.6 (01/26/2016)
    - Bugs fixed
       - Fixed current application thread constant when issuing internal calls. Issue #1183.
       - Fixed StringIndexOutOfBoundsException in HeaderReader when reading header with empty value. Issue #1167.
         Reported by Timur Gasrataliev.
       - Fixed StatusService.toStatus(Status, Request, Response) is not called. Issue #1156.
       - Fixed issue with case sensitivity of query parameters with JAX-RS. Issue #1163.
       - Fixed method value caching broken. Issue #1130.
         Reported and contributed by Andreas Wundsam.
       - Prevented NPE if using Redirector.MODE_SERVER_INBOUND. Issue #1182.
    - Enhancements
       - Upgraded Jetty connector to version 9.2.14. Issue #1180.

- 2.3.5 (10/03/2015)
    - Bugs fixed
       - Added check for jar class path resources if the inputstream is empty.
         Reported and contributed by Gernot Pansy.
       - Fixed Jetty server connector that sends the Date header twice. Issue #1141.
       - Fixed ResourceException constructor calling incorrect Status constructor. Issue #1139.
         Reported by Chad Gatesman.